feat: Create blog Card and update UI

--- a/src/index.css
+++ b/src/index.css
@@ -8,13 +8,6 @@
     box-sizing: border-box;
 }
 
-.hero {
-    background-color: hsl(0, 0%, 8%);
-    background-image: radial-gradient(
-        ellipse farthest-side at right top,
-        hsl(0, 0%, 43%) 0%,
-        hsl(0, 0%, 26%) 50%,
-        hsl(0, 0%, 8%) 100%
-    );
-    background-size: contain;
+body::-webkit-scrollbar {
+    display: none;
 }
